--- a/blog/2026-01-24-perplexity-accused-of-scraping-websites-that-explicitly-blocked-ai-scraping copy.mdx
+++ b/blog/2026-01-24-perplexity-accused-of-scraping-websites-that-explicitly-blocked-ai-scraping copy.mdx
@@ -38,7 +38,7 @@ In summary, the intersection of AI and web scraping presents a multifaceted chal
 
 ## 📌 About This Article
 
-This post was curated by ScafBlog's AI content system, bringing you the latest insights in technology and innovation.
+Enjoyed this article? Share your thoughts in the comments below. Found it useful? Subscribe for weekly technical deep-dives.
 
 **Source:** [Read the original discussion](https://techcrunch.com/2025/08/04/perplexity-accused-of-scraping-websites-that-explicitly-blocked-ai-scraping/)
 
