--- a/blog/2026-01-24-the-future-of-ai-and-its-effect-on-a-childs-learning.mdx
+++ b/blog/2026-01-24-the-future-of-ai-and-its-effect-on-a-childs-learning.mdx
@@ -1,6 +1,6 @@
 ---
 slug: the-future-of-ai-and-its-effect-on-a-childs-learning
-title: "The future of Ai and its effect on a childs learning "
+title: "The future of AI and its effect on a child's learning "
 authors: [francis]
 tags: [ai in education, childhood learning, adaptive learning, ai tutors]
 date: 2026-01-24
